<resources>
    <string name="app_name">UI</string>
    <string name="cardText">Anime is Japanese hand-drawn or computer animation</string>

    <string name="action_settings">Settings</string>
    <string name="select_mode">Select Mode</string>
    <string name="mode_single">Single-Choice</string>
    <string name="mode_multi">Multi-Choice</string>
    <string name="max_select_amount">Max Selected Amount</string>
    <string name="grid_columns">Grid Columns</string>
    <string name="image_loader">ImageLoadr</string>
    <string name="hint_default_amount">default amount is 9</string>
    <string name="grid_default_columns">default columns is 3</string>
    <string name="enable_camera">Enable Camera</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="go_select">Select</string>
</resources>
